# BTCMiner

./: .env.backup  .env.example  .env.template  .env.updated  .gitignore  Anchor.toml  BTCMiner Token Implementation.md  DEPLOYMENT_STATUS.md  PROGRESS.md  README.md  SECURITY_INCIDENT_RESPONSE.md  SUPABASE_INTEGRATION.md  deployment-dashboard.html  hardhat.config.ts  multiverse-deployment-1752861728971.json  package-lock.json  package.json  setup-deployment.sh  supabase_dependencies.json  supabase_migrations.sql  tsconfig.json
contracts/: BTCMiner.sol  WormholeBridge.sol  WormholeBridge.sol.bak
deployments/: README.md  bscTestnet-deployment.json  sepolia-deployment.json  testnet-deployments.json
frontend/: .env.example  DEBUG.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/public/: manifest.json  sw.js
frontend/src/: App.tsx  index.css  main.tsx
icp/: dfx.json
icp/frontend/: index.html
scripts/: check-balances-only.ts  check-balances.ts  check-env.ts  deploy-all-testnets.ts  deploy-all-wormhole-bridges.ts  deploy-icp.sh  deploy-multichain.ts  deploy-sepolia.ts  deploy-solana.ts  deploy-testnet.ts  deploy-wormhole-bridge.ts  generate-wallet.ts  layerzero-config.ts  setup-env.ts  setup-security-hooks.sh  setup-solana-bridge.ts  setup-trusted-remotes.ts  setup-wormhole-emitters.ts  test-cross-chain.ts  test-icp-canisters.sh  test-wormhole-transfer.ts
secure/: wallet.json
solana/: Cargo.toml  package.json
solana/src/: lib.rs
solana/tests/: btcminer-solana.ts
test/: BTCMiner.test.ts
(+164 files in other folders)
