[package]
name = "btcminer-solana"
version = "0.1.0"
description = "BTCMiner SPL Token with Wormhole Cross-Chain Integration"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "btcminer_solana"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
wormhole-anchor-sdk = "0.2.0"
pyth-sdk-solana = "0.10.0"
spl-token = "4.0.0"
spl-associated-token-account = "2.3.0"

[dev-dependencies]
solana-program-test = "1.17.0"
solana-sdk = "1.17.0"
tokio = "1.0"